# RBP_CPD

./: .env  .gitignore  CMakeLists.txt  eda.ipynb  readme.md
data/: processed.csv  processed.parquet
include/: csv_loader.hpp  rbp.hpp
outputs/: predictions.csv
scripts/: download_data.ipynb  download_data.py
src/: csv_loader.cpp  main.cpp  rbp.cpp
